# Tracking_app

./: .gitignore  README.md  __main__.py  main.py  page_attrs.txt  pyproject.toml  test_dlg.py  test_flet.py  test_flet2.py  test_flet3.py
.agents/skills/: web_ui_auditor.md
.agents/skills/react_dev/: SKILL.md
.agents/workflows/: 01-setup-env-db.md  02-build-core-ui.md  03-build-dashboard.md  react-best-practices.mdc
Testinground/: stopwatch_test.py  test.csv  testing.py
backend/: cleanup_db.py  main.py  migrate_add_notes.py  pyproject.toml  schemas.py
backend/data/: tracking.db
backend/database/: core.py  crud.py  models.py
backend/tests/: test_crud.py  test_schemas.py
dashapp/: dashapp.py
data/: tracking.db
database/: crud.py  models.py
frontend/: capture.cjs  vite.config.js
frontend/src/: App.jsx  index.css
planning/: db_schema.excalidraw  generate_excalidraw.py  generate_flow.py  ux_flow.excalidraw  ux_wireframes.excalidraw
structure/: __init__.py  loading_n_saving.py  plot_button_structure.py  stopwatch.py  task_manager.py
tasks/: tasks.csv
tests/: test_db.py
ui/: main_window.py
ui/components/: charts.py  history.py  sidebar.py  stopwatch.py
