[tool.poetry]
name = "tracking-app"
version = "0.1.0"
description = "App used for tracking the evolution of goals."
authors = ["Alexis <alexis.gomel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Everything-Tkinter = "^0.2"
tkcalendar = "^1.6.1"
pandas = "^2.2.1"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
