[tool.poetry]
name = "tracking-app"
version = "0.1.0"
description = "App used for tracking the evolution of goals."
authors = ["Alexis <alexis.gomel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Everything-Tkinter = "^0.2"
tkcalendar = "^1.6.1"
matplotlib = "^3.8.3"
dash = "^2.17.1"
dash-bootstrap-components = "^1.6.0"
flet = "^0.82.2"
sqlalchemy = "^2.0.48"


[tool.poetry.scripts]
your_app = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
